Unit_3_Embedded_C/Lesson 1/Toggle_LED/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:06:57 **** Build of configuration Debug for project stm32f103c6testing_embedded ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m3 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f103c6tx.d" -MT"Startup/startup_stm32f103c6tx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f103c6tx.o" "../Startup/startup_stm32f103c6tx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
../Src/main.c: In function 'main':
../Src/main.c:39:9: error: 'GPIOA_CHR' undeclared (first use in this function); did you mean 'GPIOA_CRH'?
   39 |         GPIOA_CHR &= 0xff0ffff;
      |         ^~~~~~~~~
      |         GPIOA_CRH
../Src/main.c:39:9: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
19:08:03 **** Incremental Build of configuration Debug for project stm32f103c6testing_embedded ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "stm32f103c6testing_embedded.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Bavly\STM32CubeIDE\workspace_1.13.2\stm32f103c6testing_embedded\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32f103c6testing_embedded.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: stm32f103c6testing_embedded.elf
 
arm-none-eabi-size   stm32f103c6testing_embedded.elf 
arm-none-eabi-objdump -h -S  stm32f103c6testing_embedded.elf  > "stm32f103c6testing_embedded.list"
   text	   data	    bss	    dec	    hex	filename
    656	      8	   1568	   2232	    8b8	stm32f103c6testing_embedded.elf
Finished building: default.size.stdout
 
Finished building: stm32f103c6testing_embedded.list
 
12:53:08 **** Build of configuration Debug for project stm32f103c6testing_embedded ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "stm32f103c6testing_embedded.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Bavly\STM32CubeIDE\workspace_1.13.2\stm32f103c6testing_embedded\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32f103c6testing_embedded.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: stm32f103c6testing_embedded.elf
 
arm-none-eabi-size   stm32f103c6testing_embedded.elf 
arm-none-eabi-objdump -h -S  stm32f103c6testing_embedded.elf  > "stm32f103c6testing_embedded.list"
arm-none-eabi-objcopy  -O ihex  stm32f103c6testing_embedded.elf  "stm32f103c6testing_embedded.hex"
arm-none-eabi-objcopy  -O binary  stm32f103c6testing_embedded.elf  "stm32f103c6testing_embedded.bin"
   text	   data	    bss	    dec	    hex	filename
    656	      8	   1568	   2232	    8b8	stm32f103c6testing_embedded.elf
Finished building: default.size.stdout
 
Finished building: stm32f103c6testing_embedded.list
 
Finished building: stm32f103c6testing_embedded.bin
Finished building: stm32f103c6testing_embedded.hex
 
 
